@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.12.3
 Date: ????
-  Features:
+  Bugfixes:
+    - Fixed a crash when calling `bounding_box.rotate()`
 ---------------------------------------------------------------------------------------------------
 Version: 0.12.2
 Date: 2022-12-06
